syntax = "proto3";

package com.goncharov.grpc;

message EmailRequest{
  string email = 1;
  string token = 2;
}

message EmailResponse{
  string message = 1;
  }

service SendMessageService{
  rpc sendMessage(EmailRequest) returns (EmailResponse);
}